Applying secrets: do not save secrets if user asked for it. Thanks Andrey Borzenkov for this patch.

REVIEW: 100859
BUG: 257777